[package]
name = "emu6809"
version = "0.1.0"
authors = ["amber <amberisvibin@gmail.com>"]
edition = "2018"
description = "A cycle-accurate emulator for the Motorola 6809."
readme = "readme.md"
repository = "https://github.com/amberisvibin/emu6809/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
